<resources>
    <string name="app_name">片语</string>
    <string name="topic">话题</string>
    <string name="my">我的</string>
    <string name="follow">关注</string>
    <string name="login">登录</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="captcha">验证码</string>
    <string name="recommend_topics">推荐话题</string>
    <string name="title">标题</string>
    <string name="content">正文</string>
    <string name="post">发布</string>
    <string name="comment">评论</string>
</resources>