<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.LoginActivity">

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:layout_gravity="end|bottom"
            android:text="@string/login"
            android:layout_margin="12dp"
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/nestedScrollView">

        <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_margin="6dp"
                android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:hint="@string/username"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:maxLines="1"
                        android:id="@+id/username"
                        android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:hint="@string/password"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:id="@+id/password"
                        android:maxLines="1"
                        android:inputType="textPassword"
                        android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <ImageView
                        android:layout_width="wrap_content"
                        android:id="@+id/captcha_img"
                        android:layout_margin="6dp"
                        android:layout_height="match_parent"/>
                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:hint="@string/captcha"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_height="wrap_content">
                    <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:id="@+id/captcha"
                            android:maxLines="1"
                            android:layout_height="wrap_content"/>
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>


        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView>


</FrameLayout>